# AmbulanceManagmentSystem

./: .gitignore  CMakeLists.txt  Egypt.txt  README.md  all_ep_scenario.txt  high_failure.txt  large_distance.txt  main.cpp  moderate_failure.txt  stress.txt
3-Queues/: CMakeLists.txt
5-PriorityQueue/: LinkedQueue.h  Node.h  priNode.h  priQueue.h
Ambulance/: Car.cpp  Car.h  NC.cpp  NC.h  SC.cpp  SC.h
DerivedClasses/: CancellableQueue.h  DerivedPriQueue.h
Hospital/: hospital.cpp  hospital.h
Organizer/: Organizer.cpp  Organizer.h  globals.cpp  globals.h
Patient/: EP.cpp  EP.h  NP.cpp  NP.h  Patient.cpp  Patient.h  SP.cpp  SP.h
UI/: UI.cpp  UI.h
